--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "material-table": "^1.69.2",
     "material-ui": "^0.20.2",
-    "mysql": "^2.18.1",
     "next": "10.0.7",
     "react": "17.0.1",
+    "react-cookie": "^4.0.3",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.1",
+    "serverless-mysql": "^1.5.4",
     "typescript": "^4.1.5"
   },
   "devDependencies": {
