--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "material-table": "^1.69.2",
-    "material-ui": "^0.20.2",
+    "mui-datatables": "^3.7.6",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-cookie": "^4.0.3",
