--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-cookie": "^4.0.3",
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.1",
+    "react-spring": "^9.2.3",
+    "react-use-gesture": "^9.1.3",
     "serverless-mysql": "^1.5.4",
     "typescript": "^4.1.5"
   },
