--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "material-table": "^1.69.2",
     "mui-datatables": "^3.7.6",
     "next": "10.0.7",
+    "next-seo": "^4.26.0",
     "react": "17.0.1",
     "react-content-loader": "^6.0.3",
     "react-cookie": "^4.0.3",
@@ -26,6 +27,9 @@
     "react-spring": "^9.2.3",
     "react-use-gesture": "^9.1.3",
     "serverless-mysql": "^1.5.4",
+    "styled-components": "^5.3.0",
+    "svg-sprite-loader": "^6.0.9",
+    "swr": "^0.5.6",
     "typescript": "^4.1.5"
   },
   "devDependencies": {
