Fixed _app and _document

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
       "pages/api/schemas/Card.ts",
       "pages/api/schemas/User.js"
   , "pages/api/database/database.js"  ],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", ".next"]
   }
   
