--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/react": "^17.0.2",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "imagemin-svgo": "^9.0.0",
     "material-table": "^1.69.2",
     "mui-datatables": "^3.7.6",
     "next": "10.0.7",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "next-seo": "^4.26.0",
     "react": "17.0.1",
     "react-content-loader": "^6.0.3",
