--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,9 @@
       "**/*.tsx",
       "pages/index.tsx",
       "pages/api/schemas/Card.ts",
-      "pages/api/schemas/User.js"
-  , "pages/api/database/database.js"  ],
+      "pages/api/schemas/User.js", 
+      "pages/api/database/database.js"
+    ],
     "exclude": ["node_modules", ".next"]
   }
   
