--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "@pages/*": ["pages/*"],
         "@public/*": ["public/*"],
         "@hooks/*": ["hooks/*"],
-        "@layouts/*": ["layouts/*"]
+        "@layouts/*": ["layouts/*"],
+        "@constants/*": ["constants/*"]
       },
       "target": "es5",
       "lib": ["dom", "dom.iterable", "esnext"],
