--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-cookie": "^4.0.3",
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.1",
+    "react-query": "^3.21.1",
     "react-spring": "^9.2.3",
     "react-use-gesture": "^9.1.3",
     "serverless-mysql": "^1.5.4",
