--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "@public/*": ["public/*"],
         "@hooks/*": ["hooks/*"],
         "@layouts/*": ["layouts/*"],
-        "@constants/*": ["constants/*"]
+        "@constants/*": ["constants/*"],
+        "@requests/*": ["requests/*"]
       },
       "target": "es5",
       "lib": ["dom", "dom.iterable", "esnext"],
