--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "imagemin-svgo": "^9.0.0",
     "material-table": "^1.69.2",
