--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-content-loader": "^6.0.3",
     "react-cookie": "^4.0.3",
     "react-cookies": "^0.1.1",
+    "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
     "react-query": "^3.33.7",
     "react-spring": "^9.3.2",
