--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "imagemin-svgo": "^9.0.0",
@@ -29,13 +30,12 @@
     "react-cookies": "^0.1.1",
     "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
-    "react-query": "^3.33.7",
+    "react-query": "^3.34.0",
     "react-spring": "^9.3.2",
     "react-use-gesture": "^9.1.3",
     "serverless-mysql": "^1.5.4",
     "styled-components": "^5.3.0",
     "svg-sprite-loader": "^6.0.9",
-    "swr": "^0.5.6",
     "typescript": "^4.1.5"
   },
   "devDependencies": {
