--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
+    "babel-plugin-styled-components": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "imagemin-svgo": "^9.0.0",
