--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,6 @@
   "presets": ["next/babel"],
   "plugins": [
     ["styled-components", { "ssr": true, "displayName": false }],
-    "emotion"
+    ["@emotion"]
   ]
 }
