--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start -p 9000"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
-    "babel-plugin-styled-components": "^2.0.2",
+    "babel-plugin-emotion": "^11.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "imagemin-svgo": "^9.0.0",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
