--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-emotion": "^11.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
     "lodash": "^4.17.21",
     "material-table": "^1.69.2",
