--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-spring": "^9.3.2",
     "react-use-gesture": "^9.1.3",
     "serverless-mysql": "^1.5.4",
+    "sql-template-strings": "^2.2.2",
     "styled-components": "^5.3.0",
     "svg-sprite-loader": "^6.0.9",
     "typescript": "^4.1.5"
