--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-table": "^7.7.9",
     "axios": "^0.24.0",
     "babel-plugin-emotion": "^11.0.0",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "react-dom": "17.0.1",
     "react-query": "^3.34.0",
     "react-spring": "^9.3.2",
+    "react-table": "^7.7.0",
     "react-use-gesture": "^9.1.3",
     "serverless-mysql": "^1.5.4",
     "sql-template-strings": "^2.2.2",
