--- a/package.json
+++ b/package.json
@@ -27,14 +27,10 @@
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.26.0",
     "react": "17.0.1",
-    "react-content-loader": "^6.0.3",
-    "react-cookie": "^4.0.3",
-    "react-cookies": "^0.1.1",
     "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
     "react-query": "^3.34.0",
-    "react-spring": "^9.3.2",
-    "react-use-gesture": "^9.1.3",
+    "react-toastify": "^8.2.0",
     "serverless-mysql": "^1.5.4",
     "sql-template-strings": "^2.2.2",
     "styled-components": "^5.3.0",
