--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
+    "@mui/x-data-grid": "^5.6.0",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
