--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.3.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.4.4",
+    "@mui/x-data-grid": "^5.6.0",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
@@ -21,11 +23,11 @@
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
     "lodash": "^4.17.21",
-    "mui-datatables": "^3.7.6",
     "next": "10.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.26.0",
+    "rc-table": "^7.23.0",
     "react": "17.0.1",
     "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
