--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.4.4",
-    "@mui/x-data-grid": "^5.6.0",
+    "@heroicons/react": "^1.0.6",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
@@ -27,7 +25,6 @@
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.26.0",
-    "rc-table": "^7.23.0",
     "react": "17.0.1",
     "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
@@ -42,6 +39,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "autoprefixer": "^10.4.2",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
@@ -49,6 +47,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
+    "postcss": "^8.4.8",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^3.0.23"
   }
 }
