--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9000",
+    "dev": "env TAILWIND_MODE=watch NODE_ENV=development next dev -p 9000",
     "build": "next build",
     "start": "next start -p 9000"
   },
