--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "env TAILWIND_MODE=watch NODE_ENV=development next dev -p 9000",
+    "dev": "next dev -p 9000",
     "build": "next build",
     "start": "next start -p 9000"
   },
@@ -21,7 +21,7 @@
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
     "lodash": "^4.17.21",
-    "next": "10.0.7",
+    "next": "^12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.26.0",
