--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,62 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@components/*": ["components/*"],
-        "@constants/*": ["constants/*"],
-        "@hooks/*": ["queries/*"],
-        "@layouts/*": ["layouts/*"],
-        "@pages/*": ["pages/*"],
-        "@public/*": ["public/*"],
-        "@requests/*": ["requests/*"],
-        "@utils/*": ["utils/*"]
-      },
-      "target": "es5",
-      "lib": ["dom", "dom.iterable", "esnext"],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "strict": false,
-      "forceConsistentCasingInFileNames": true,
-      "noEmit": true,
-      "esModuleInterop": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "jsx": "preserve"
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": [
+        "components/*"
+      ],
+      "@constants/*": [
+        "constants/*"
+      ],
+      "@hooks/*": [
+        "queries/*"
+      ],
+      "@layouts/*": [
+        "layouts/*"
+      ],
+      "@pages/*": [
+        "pages/*"
+      ],
+      "@public/*": [
+        "public/*"
+      ],
+      "@requests/*": [
+        "requests/*"
+      ],
+      "@utils/*": [
+        "utils/*"
+      ]
     },
-    "include": [
-      "next-env.d.ts",
-      "**/*.ts",
-      "**/*.tsx",
-      "pages/index.tsx",
-      "pages/api/schemas/Card.ts",
-      "pages/api/schemas/User.js", 
-      "pages/api/database/database.js"
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
-    "exclude": ["node_modules", ".next"]
-  }
-  
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/index.tsx",
+    "pages/api/schemas/Card.ts",
+    "pages/api/schemas/User.js",
+    "pages/api/database/database.js"
+  ],
+  "exclude": [
+    "node_modules",
+    ".next"
+  ]
+}
