--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
     "babel-plugin-emotion": "^11.0.0",
+    "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "http-status-codes": "^2.1.4",
