--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
     "react-query": "^3.34.0",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
     "serverless-mysql": "^1.5.4",
     "sql-template-strings": "^2.2.2",
