--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-query": "^3.34.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
+    "react-virtual": "^2.10.4",
     "serverless-mysql": "^1.5.4",
     "sql-template-strings": "^2.2.2",
     "styled-components": "^5.3.0",
