--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-seo": "^4.26.0",
     "react": "17.0.1",
     "react-animated-burgers": "^1.2.8",
+    "react-card-flip": "^1.1.5",
     "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
     "react-query": "^3.34.0",
