--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
     "babel-plugin-emotion": "^11.0.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^8.2.0",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
