--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^8.2.0",
+    "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
     "lodash": "^4.17.21",
