--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.3",
     "dotenv": "^8.2.0",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
