--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.3",
     "dotenv": "^8.2.0",
+    "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
     "lodash": "^4.17.21",
