--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^8.2.0",
     "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
