--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
     "@types/crypto-js": "^4.1.1",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "axios": "^0.24.0",
