--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
+    "@types/argparse": "^2.0.10",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "argparse": "^2.0.1",
     "axios": "^0.24.0",
     "babel-plugin-emotion": "^11.0.0",
     "classnames": "^2.3.1",
