--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "date-fns": "^2.28.0",
-    "date-fns-tz": "^1.3.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^8.2.0",
     "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
