--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-csv-reader": "^3.4.0",
     "react-dom": "17.0.1",
     "react-query": "^3.34.0",
+    "react-responsive": "^9.0.2",
     "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
     "react-virtual": "^2.10.4",
