--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
+    "@react-spring/web": "^9.7.3",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
@@ -40,6 +41,7 @@
     "react-responsive": "^9.0.2",
     "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
+    "react-use-gesture": "^9.1.3",
     "react-virtual": "^2.10.4",
     "serverless-mysql": "^1.5.4",
     "sql-template-strings": "^2.2.2",
