--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "17.0.1",
     "react-query": "^3.34.0",
     "react-responsive": "^9.0.2",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
     "react-use-gesture": "^9.1.3",
