--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "APP_ENV=development next dev -p 9000",
     "build": "next build",
     "start": "APP_ENV=production next start -p 9000",
-    "start:dev": "APP_ENV=development next start -p 6500"
+    "start:dev": "APP_ENV=development next start -p 6500",
+    "create-cards-requests": "APP_ENV=script tsx bin/create-card-requests/create-card-requests.ts",
+    "delete-duplicates": "APP_ENV=script tsx bin/delete-duplicate-cards/delete-duplicate-cards.ts --dryRun=true",
+    "pay-card-creators": "APP_ENV=script tsx bin/pay-card-creators/pay-card-creators.ts",
+    "smoke-test": "APP_ENV=script tsx bin/smoke-test/smoke-test.ts"
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.3.0",
@@ -14,9 +18,6 @@
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
     "@react-spring/web": "^9.7.3",
-    "@types/crypto-js": "^4.1.1",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
     "axios": "^0.24.0",
     "babel-plugin-emotion": "^11.0.0",
     "classnames": "^2.3.1",
@@ -48,9 +49,14 @@
     "sql-template-strings": "^2.2.2",
     "styled-components": "^5.3.0",
     "svg-sprite-loader": "^6.0.9",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
     "typescript": "^4.1.5"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "autoprefixer": "^10.4.2",
