--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "APP_ENV=production next start -p 9000",
     "start:dev": "APP_ENV=development next start -p 6500",
-    "create-cards-requests": "APP_ENV=script tsx bin/create-card-requests/create-card-requests.ts",
-    "delete-duplicates": "APP_ENV=script tsx bin/delete-duplicate-cards/delete-duplicate-cards.ts --dryRun=true",
-    "pay-card-creators": "APP_ENV=script tsx bin/pay-card-creators/pay-card-creators.ts",
+    "create-cards-requests": "APP_ENV=script tsx bin/create-card-requests/create-card-requests.ts --dryRun=true",
+    "delete-duplicates": "APP_ENV=script tsx bin/delete-duplicate-cards/delete-duplicate-cards.ts",
+    "pay-card-creators": "APP_ENV=script tsx bin/pay-card-creators/pay-card-creators.ts --dryRun=true",
     "smoke-test": "APP_ENV=script tsx bin/smoke-test/smoke-test.ts"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
     "@react-spring/web": "^9.7.3",
+    "@types/lodash": "^4.14.198",
     "axios": "^0.24.0",
     "babel-plugin-emotion": "^11.0.0",
     "classnames": "^2.3.1",
@@ -29,6 +30,7 @@
     "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^9.0.0",
+    "lodash": "^4.17.21",
     "next": "^12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
