--- a/package.json
+++ b/package.json
@@ -13,64 +13,62 @@
     "smoke-test": "APP_ENV=script tsx bin/smoke-test/smoke-test.ts"
   },
   "dependencies": {
-    "@emotion/babel-plugin": "^11.3.0",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@heroicons/react": "^1.0.6",
+    "@babel/core": "^7.23.5",
+    "@heroicons/react": "^2.0.18",
     "@react-spring/web": "^9.7.3",
     "@types/lodash": "^4.14.198",
-    "axios": "^0.24.0",
+    "axios": "^1.6.2",
     "babel-plugin-emotion": "^11.0.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "csv-parse": "^5.4.0",
     "dayjs": "^1.11.7",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.3.1",
     "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
-    "imagemin-svgo": "^9.0.0",
+    "imagemin-svgo": "^10.0.1",
     "lodash": "^4.17.21",
-    "next": "^12.1.0",
+    "next": "^14.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
-    "next-seo": "^4.26.0",
-    "react": "17.0.1",
-    "react-animated-burgers": "^1.2.8",
+    "next-seo": "^6.4.0",
+    "react": "18.2.0",
     "react-card-flip": "^1.1.5",
-    "react-csv-reader": "^3.4.0",
-    "react-dom": "17.0.1",
+    "react-csv-reader": "^4.0.0",
+    "react-dom": "18.2.0",
     "react-query": "^3.34.0",
     "react-responsive": "^9.0.2",
     "react-spinners": "^0.13.8",
     "react-table": "^7.7.0",
-    "react-toastify": "^8.2.0",
+    "react-toastify": "^9.1.3",
     "react-use-gesture": "^9.1.3",
     "react-virtual": "^2.10.4",
     "serverless-mysql": "^1.5.4",
     "sql-template-strings": "^2.2.2",
-    "styled-components": "^5.3.0",
+    "styled-components": "^6.1.1",
     "svg-sprite-loader": "^6.0.9",
     "ts-node": "^10.9.1",
-    "tsx": "^3.12.7",
-    "typescript": "^4.1.5"
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@types/node": "^20.10.2",
+    "@types/react": "^18.2.41",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.2",
     "babel-plugin-styled-components": "^2.0.2",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.8",
-    "prettier": "^2.2.1",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.0.23"
   }
 }
