add charity card request script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "APP_ENV=production next start -p 9000",
     "start:dev": "APP_ENV=development next start -p 6500",
-    "create-card-requests": "APP_ENV=script tsx bin/create-card-requests/create-card-requests.ts --season=74 --prodRun",
+    "base-requests": "APP_ENV=script tsx bin/base-requests/base-requests.ts --season=74",
+    "charity-requests": "APP_ENV=script tsx bin/charity-requests/charity-requests.ts",
     "delete-duplicates": "APP_ENV=script tsx bin/delete-duplicate-cards/delete-duplicate-cards.ts --prodRun",
     "pay-card-creators": "APP_ENV=script tsx bin/pay-card-creators/pay-card-creators.ts --prodRun",
     "smoke-test": "APP_ENV=script tsx bin/smoke-test/smoke-test.ts",
@@ -17,6 +18,7 @@
     "@babel/core": "^7.23.5",
     "@heroicons/react": "^2.0.18",
     "@react-spring/web": "^9.7.3",
+    "@types/argparse": "^2.0.14",
     "@types/lodash": "^4.14.198",
     "axios": "^1.6.2",
     "babel-plugin-emotion": "^11.0.0",
