--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-use-gesture": "^9.1.3",
     "react-virtual": "^2.10.4",
     "serverless-mysql": "^1.5.4",
+    "sharp": "0.32.6",
     "sql-template-strings": "^2.2.2",
     "styled-components": "^6.1.1",
     "svg-sprite-loader": "^6.0.9",
@@ -58,7 +59,6 @@
     "tsx": "^4.6.2",
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
-    "webp-converter": "^2.3.3",
     "webpack": "^5.89.0"
   },
   "devDependencies": {
