--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroicons/react": "^2.0.18",
     "@react-spring/web": "^9.7.3",
     "@types/argparse": "^2.0.14",
+    "@types/cors": "^2.8.17",
     "@types/lodash": "^4.14.198",
     "axios": "^1.6.2",
     "babel-plugin-emotion": "^11.0.0",
