--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "APP_ENV=production next start -p 9000",
     "start:dev": "APP_ENV=development next start -p 6500",
     "add-cards-to-users": "APP_ENV=script tsx bin/add-cards-to-users/add-cards-to-users.ts",
-    "base-requests": "APP_ENV=script tsx bin/base-requests/base-requests.ts --season=74",
+    "base-requests": "APP_ENV=script tsx bin/base-requests/base-requests.ts --season=77",
     "charity-requests": "APP_ENV=script tsx bin/charity-requests/charity-requests.ts",
     "convert-all-pngs-to-webps": "APP_ENV=script tsx bin/convert-all-pngs-to-webps/convert-all-pngs-to-webps.ts",
     "convert-single-png-to-webp": "APP_ENV=script tsx bin/convert-single-png-to-webp/convert-single-png-to-webp.ts",
-    "delete-duplicates": "APP_ENV=script tsx bin/delete-duplicate-cards/delete-duplicate-cards.ts --prodRun",
-    "pay-card-creators": "APP_ENV=script tsx bin/pay-card-creators/pay-card-creators.ts --prodRun",
+    "delete-duplicates": "APP_ENV=script tsx bin/delete-duplicate-cards/delete-duplicate-cards.ts",
+    "pay-card-creators": "APP_ENV=script tsx bin/pay-card-creators/pay-card-creators.ts",
     "smoke-test": "APP_ENV=script tsx bin/smoke-test/smoke-test.ts",
     "temp-script": "APP_ENV=script tsx bin/temp-script/temp-script.ts",
     "monthly-subscription": "APP_ENV=script tsx bin/monthly-subscription/monthly-subscription.ts"
