--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "dependencies": {
     "@babel/core": "^7.23.5",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
     "@heroicons/react": "^2.0.18",
     "@react-spring/web": "^9.7.3",
     "@types/argparse": "^2.0.14",
     "@types/cors": "^2.8.17",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.198",
     "axios": "^1.6.2",
     "babel-plugin-emotion": "^11.0.0",
@@ -36,6 +39,7 @@
     "formik": "^2.2.9",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^10.0.1",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "^14.0.3",
     "next-compose-plugins": "^2.2.1",
@@ -61,7 +65,8 @@
     "tsx": "^4.6.2",
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
-    "webpack": "^5.89.0"
+    "webpack": "^5.89.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
