--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@heroicons/react": "^2.0.18",
+    "@next/font": "^14.2.8",
     "@react-spring/web": "^9.7.3",
     "@types/argparse": "^2.0.14",
     "@types/cors": "^2.8.17",
@@ -53,7 +54,6 @@
     "react-responsive": "^9.0.2",
     "react-spinners": "^0.13.8",
     "react-table": "^7.7.0",
-    "react-toastify": "^9.1.3",
     "react-use-gesture": "^9.1.3",
     "react-virtual": "^2.10.4",
     "serverless-mysql": "^1.5.4",
