--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/argparse": "^2.0.14",
     "@types/cors": "^2.8.17",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.14.198",
     "axios": "^1.6.2",
     "babel-plugin-emotion": "^11.0.0",
@@ -41,6 +42,7 @@
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^10.0.1",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "^14.0.3",
     "next-compose-plugins": "^2.2.1",
@@ -64,7 +66,7 @@
     "ts-node": "^10.9.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2",
-    "uuid": "^9.0.1",
+    "uuid": "^10.0.0",
     "webpack": "^5.89.0",
     "yup": "^1.4.0"
   },
