--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@babel/core": "^7.23.5",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.0.18",
-    "@next/font": "^14.2.8",
     "@react-spring/web": "^9.7.3",
     "@types/argparse": "^2.0.14",
     "@types/cors": "^2.8.17",
@@ -39,12 +40,14 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.3.1",
     "formik": "^2.2.9",
+    "framer-motion": "^11.5.4",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^10.0.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "^14.0.3",
+    "next/font": "^14.2.8",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^6.4.0",
