--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.0.18",
+    "@next/font": "^14.2.11",
+    "@octokit/request": "^9.1.3",
     "@react-spring/web": "^9.7.3",
     "@types/argparse": "^2.0.14",
     "@types/cors": "^2.8.17",
@@ -47,7 +49,6 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "^14.0.3",
-    "next/font": "^14.2.8",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^6.4.0",
