--- a/package.json
+++ b/package.json
@@ -26,13 +26,7 @@
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.0.18",
     "@next/font": "^14.2.11",
-    "@octokit/request": "^9.1.3",
     "@react-spring/web": "^9.7.3",
-    "@types/argparse": "^2.0.14",
-    "@types/cors": "^2.8.17",
-    "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/lodash": "^4.14.198",
     "axios": "^1.6.2",
     "babel-plugin-emotion": "^11.0.0",
     "classnames": "^2.3.1",
@@ -52,6 +46,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^6.4.0",
+    "octokit": "^4.0.2",
     "react": "18.2.0",
     "react-card-flip": "^1.1.5",
     "react-csv-reader": "^4.0.0",
@@ -75,7 +70,12 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/argparse": "^2.0.14",
+    "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.1.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.14.198",
     "@types/node": "^20.10.2",
     "@types/react": "^18.2.41",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
