--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "monthly-subscription": "APP_ENV=script tsx bin/monthly-subscription/monthly-subscription.ts"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@babel/core": "^7.23.5",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.0.18",
@@ -36,6 +38,8 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.3.1",
     "formik": "^2.2.9",
+    "framer-motion": "^11.5.5",
+    "hamburger-react": "^2.5.1",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^10.0.1",
     "js-cookie": "^3.0.5",
@@ -46,6 +50,7 @@
     "next-optimized-images": "^2.6.2",
     "next-seo": "^6.4.0",
     "octokit": "^4.0.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-card-flip": "^1.1.5",
     "react-csv-reader": "^4.0.0",
@@ -55,7 +60,6 @@
     "react-spinners": "^0.13.8",
     "react-table": "^7.7.0",
     "react-use-gesture": "^9.1.3",
-    "react-virtual": "^2.10.4",
     "serverless-mysql": "^1.5.4",
     "sharp": "0.32.6",
     "sql-template-strings": "^2.2.2",
