--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^6.4.0",
+    "next-themes": "^0.3.0",
     "octokit": "^4.0.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
