--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "react-dom": "18.2.0",
     "react-query": "^3.34.0",
     "react-responsive": "^9.0.2",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-table": "^7.7.0",
     "react-use-gesture": "^9.1.3",
     "serverless-mysql": "^1.5.4",
     "sharp": "0.32.6",
+    "slick-carousel": "^1.8.1",
     "sql-template-strings": "^2.2.2",
     "styled-components": "^6.1.1",
     "svg-sprite-loader": "^6.0.9",
