--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 9000",
     "build": "next build",
     "start": "next start -p 9000",
-    "start:dev": "next start -p 6500"
+    "start:dev": "NODE_ENV=development next start -p 6500 "
   },
   "dependencies": {
     "@babel/core": "^7.23.5",
