--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "csv-parse": "^5.4.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.3.1",
     "formik": "^2.2.9",
