Binder Table Refresh
-Moved to tanstack tables
-Updated so you can search the table by anything
-Moved deletebinder to its own component to call it
-Cleaned up visual stuff on binders page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/font": "^14.2.11",
     "@react-spring/web": "^9.7.3",
     "@svgr/webpack": "^8.0.1",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.6.2",
     "babel-plugin-emotion": "^11.0.0",
     "classnames": "^2.3.1",
@@ -31,6 +32,7 @@
     "dotenv": "^16.3.1",
     "formik": "^2.2.9",
     "framer-motion": "^11.5.5",
+    "fuzzysort": "^3.1.0",
     "hamburger-react": "^2.5.1",
     "http-status-codes": "^2.1.4",
     "imagemin-svgo": "^10.0.1",
